--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -12,6 +12,17 @@ dist
 dist-ssr
 *.local
 
+# Environment files
+.env
+.env.local
+.env.production
+.env.staging
+.env.development
+
+# Keep example files
+!.env.example
+!.env.production.example
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
